<resources>
    <string name="app_name">Notifications Example</string>
    <string name="channel1_name">Channel 1</string>
    <string name="channel2_name">Channel 2</string>
    <string name="channel3_name">Channel 3</string>
    <string name="channel4_name">Channel 4</string>
    <string name="channel1_description">This is Channel 1</string>
    <string name="channel2_description">This is Channel 2</string>
    <string name="channel3_description">This is Channel 3</string>
    <string name="channel4_description">This is Channel 4</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="send_on_channel_1_cn">Send on Ch 1 (Custom Notification)</string>
    <string name="send_on_channel_2_cn">Send on Ch 2 (Custom Notification)</string>
    <string name="send_on_channel_1_li_bt">Send on Ch 1 (Large Icon, Big Text Styles)</string>
    <string name="send_on_channel_2_i">Send on Ch 2 (Inbox Style)</string>
    <string name="send_on_channel_1_bp">Send on Ch 1 (Big Picture Style)</string>
    <string name="send_on_channel_2_m">Send on Ch 2 (Media Style)</string>
    <string name="send_on_channel_2_pb">Send on Ch 2 (Progress Bar Notification)</string>
    <string name="send_on_channel_1_cs">Send on Ch 1 (Channel Settings)</string>
    <string name="send_on_channel_2_ng">Send on Ch 2 (Notification Group)</string>
    <string name="delete_channels">Delete Channels</string>
    <string name="long_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed leo consectetur, iaculis felis non, porta urna. Integer vulputate nisl at massa facilisis fringilla. Ut egestas, eros placerat placerat accumsan, orci velit finibus sem, in placerat lorem dolor in odio. Mauris auctor tortor eget quam facilisis commodo. Nulla in auctor justo, dapibus pharetra elit. Nam malesuada gravida porttitor. Integer placerat, est condimentum facilisis commodo, magna magna sodales dolor, non vestibulum risus tellus ut nibh. Donec accumsan mauris quis libero ullamcorper, sed tincidunt purus lobortis. Nunc sed leo vel est ullamcorper aliquet id eget dolor. Maecenas imperdiet lorem pellentesque, finibus risus in, mollis dui. Cras bibendum risus id rutrum sagittis. Donec ullamcorper, nisi vel rhoncus ullamcorper, urna ligula pretium nunc, at volutpat ex erat bibendum metus.</string>
    <string name="big_content_title">Big Content Title</string>
    <string name="summary_text">Summary Text</string>
    <string name="download">Download</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="group1_name">Group 1</string>
    <string name="group2_name">Group 2</string>
</resources>
